consul-kubernetes/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consul
  labels:
    app.kubernetes.io/name: consul
  namespace: consul
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: consul
      component: server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: consul
        component: server
      annotations:
        "consul.hashicorp.com/connect-inject": "false"
    spec:
      spec:
      serviceAccountName: consul
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - consul
              topologyKey: kubernetes.io/hostname
      terminationGracePeriodSeconds: 10
      securityContext:
        fsGroup: 1000
      containers:
        - name: consul
          image: "consul:latest"
          imagePullPolicy: IfNotPresent
          args:
            - "agent"
            - "-advertise=$(POD_IP)"
            - "-bootstrap-expect=3"
            - "-config-file=/etc/consul/config/server.json"
            - "-encrypt=$(GOSSIP_ENCRYPTION_KEY)"
          volumeMounts:
            - name: data
              mountPath: /consul/data
            - name: config
              mountPath: /etc/consul/config
            - name: tls
              mountPath: /etc/tls
          lifecycle:
            preStop:
              exec:
                command:
                - /bin/sh
                - -c
                - consul leave
          ports:
            - containerPort: 8500
              name: ui-port
              protocol: TCP
            - containerPort: 8400
              name: alt-port
              protocol: TCP
            - containerPort: 53
              name: udp-port
              protocol: UDP
            - containerPort: 8443
              name: https-port
              protocol: TCP
            - containerPort: 8080
              name: http-port
              protocol: TCP
            - containerPort: 8301
              name: serflan
            - containerPort: 8302
              name: serfwan
            - containerPort: 8600
              name: consuldns
            - containerPort: 8300
              name: server
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: ui-port
          readinessProbe:
            httpGet:
              path: /
              port: ui-port
          resources: {}
            # limits:
            #   cpu: 100m
            #   memory: 100Mi
            # requests:
            #   cpu: 100m
            #   memory: 100Mi
      volumes:
        - name: config
          configMap:
            name: consul
        - name: tls
          secret:
            secretName: consul  
        - name: data
          persistentVolumeClaim:
            claimName: consul-claim
